# ascendir_parser

./: Build.md  CMakeLists.txt  README.md  README_SIMULATOR.md  scf_for.mlir  test.mlir  test2.mlir  test_error.mlir  test_hivm.mlir  test_intr_complete.mlir  test_memref.mlir  test_with_branch.mlir
.cache/clangd/index/: Parser.cpp.6686CFA4E708AAC4.idx  Parser.h.4561F706B2872043.idx  main.cpp.831171EEA71E9D89.idx
cmake/: BiShengIRDeps.cmake
config/: external_func.yml
docs/: SimulatorDesign.md  SimulatorSummary.md  SimulatorUsage.md
include/: ExecutionContext.h  ExecutionUnit.h  ExternalFunctionConfig.h  Instruction.h  InstructionExecutor.h  InstructionRegistry.h  InstructionSequence.h  Isa.h  IsaExecutor.h  IsaRegistry.h  IsaSequence.h  Parser.h
include/Instructions/: ArithIsas.h  ControlFlowIsas.h  FuncIsas.h  HivmIsas.h  YieldIsa.h
src/: Analyzer.cpp  CMakeLists.txt  ExecutionContext.cpp  ExternalFunctionConfig.cpp  InstructionExecutor.cpp  InstructionRegistry.cpp  InstructionSequence.cpp  Isa.cpp  IsaExecutor.cpp  IsaRegistry.cpp  IsaSequence.cpp  Parser.cpp  main.cpp
src/Instructions/: ArithInstructions.cpp  FuncInstructions.cpp  HivmInstructions.cpp
test/: run_all_tests.sh  run_tests.sh  test_all.mlir  test_arith.mlir  test_compare.mlir  test_complex_control_flow.mlir  test_compute.mlir  test_deep_nesting.mlir  test_external_cube.mlir  test_external_func.mlir  test_float.mlir  test_hivm_basic.mlir  test_hivm_complex.mlir  test_if_yield.mlir  test_matmul_pipeline.mlir  test_multi_component.mlir  test_nested.mlir  test_nested_for.mlir  test_nested_if.mlir  test_nested_if_yield.mlir  test_pipeline.mlir  test_scf_for.mlir  test_scf_if.mlir  test_scf_if_else.mlir  test_simple.mlir
tests/: CMakeLists.txt  README.md  run_unit_tests.sh  test_isa_executor.cpp  test_isa_sequence.cpp  test_parser.cpp
